# WinTMux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WinTMux.sln  build_clean.bat  build_runtime.bat  build_solution.bat  imgui.ini  premake5.lua
Lib/: CMakeLists.txt
Scripts/: test_terminal.py
Source/: CMakeLists.txt  Main.cpp
Source/Console/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  TerminalWindow.cpp  TerminalWindow.h
Source/Core/: ControlSequences.cpp  ControlSequences.h  Glyph.h  KeyCodes.Console.cpp  KeyCodes.Console.h  KeyCodes.cpp  KeyCodes.h  Modes.h  String.h  control_sequences.cpp  control_sequences.h  ringbuffer.h  utf8.cpp  utf8.h
Source/Launch/: ConsoleMain.cpp  Main.cpp
Source/LibUV/: LibUV.cpp
Source/MainWindow/: CommandLine.cpp  CommandLine.h  IOverlay.cpp  IOverlay.h  MainWindow.cpp  MainWindow.h  TerminalSelectorOverlay.cpp  TerminalSelectorOverlay.h  WorkspaceSelectorOverlay.cpp  WorkspaceSelectorOverlay.h
Source/Platform/: Application.cpp  Application.h  ConsoleWindow.cpp  IOStream.cpp  IOStream.h  console.cpp  console.h  pipe.cpp  pipe.h  process.cpp  process.h  stdin.cpp  stdin.h  stdout.cpp  stdout.h
Source/PseudoConsole/: EchoCon.cpp  Keys.cpp  Keys.h  PTYProcess.cpp  PTYProcess.h
Source/UI/: UI.cpp  UI.h  Workspace.cpp  Workspace.h
Source/VtParser/: Actions.h  Parser.cpp  Parser.h  StateMachine.cpp  StateMachine.h  States.h  csi_commands.h  sgr_commands.h  utf8.cpp  utf8.h  vtparser.cpp  vtparser.h
Source/Workspace/: Terminal.cpp  Terminal.h  Tree.cpp  Tree.h  Workspace.cpp  Workspace.h
